--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,3 +39,14 @@
   /* font-family: 'Open Sans', sans-serif */
 }
 
+.button {
+  background-color: #e7e7e7;
+  font-size: 18px;
+  padding: 8px 50px;
+  border-radius: 4px;
+
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
